--- a/multi_io.ui
+++ b/multi_io.ui
@@ -27,7 +27,7 @@
    <layout class="QGridLayout" name="gridLayout">
     <item row="6" column="0">
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="1">
+      <item row="0" column="2">
        <widget class="QPushButton" name="pushButton_multi_io">
         <property name="text">
          <string>Plot</string>
@@ -46,6 +46,13 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="pushButton_auto_threshold">
+        <property name="text">
+         <string>Estimate Thresholds</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
