--- a/ui/main.ui
+++ b/ui/main.ui
@@ -704,6 +704,16 @@
           </property>
          </widget>
         </item>
+        <item row="6" column="0">
+         <widget class="QPushButton" name="pushButton_abr">
+          <property name="toolTip">
+           <string>Creates an auditory brainstem response (ABR) graph based on your current test.</string>
+          </property>
+          <property name="text">
+           <string>ABR</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
      </layout>
